# InstagramPy

./: .gitignore  Dockerfile  README.md  api.cmd  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker-publish.yml
API/: app.py
instagrampy/: __init__.py
instagrampy/data/: models.py
instagrampy/utils/: utils.py
