[tool.poetry]
name = "instagrampy"
version = "0.1.0"
description = "Library for scraping Instagram"
authors = ["Devansh3712 <devanshamity@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fake-useragent = "^0.1.11"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
pyshorteners = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
